--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb+srv://madhkunchala:Madhu%40123@cluster0.clbjf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-SCREAT_KEY=abc
+SECRET_KEY=abc
 EMAIL=
 PASSWORD=
-PORT=3939
+PORT=5000
